<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"

        android:inputType="textEmailAddress"
        android:hint="@string/Act1_etHint"
        />

    <CheckBox
        android:id="@+id/cb_Enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Act1_chEnable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/bt_Clear"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Act1_btClear" />

        <Button
            android:id="@+id/bt_Send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:text="@string/Act1_btSend" />

    </LinearLayout>

</LinearLayout>